@@ -1,5 +1,6 @@
 v0.10
-	* ADD : configurable zoom factors (only for "None" background for now)
+	* ADD : configurable projection type (allow custom zoom in "Merkaartor" projection, for background also)
+	* ADD : configurable zoom factors
 	* ADD : Background tiles caching
 	* ADD : Initial track to road
 	* ADD : Initial osmarender rendering
